--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-redux": "^9.2.0",
+    "swr": "^2.3.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
